# log_filter

./: .gitignore  README.md  example_config.json  example_filters.json  main.py  main_cli.py  pyproject.toml  regex_playground.py  test.py  test1.txt
src/: buffer.py  cli.py  filter.py  gui.py  utils.py
tests/: test_buffer.py  test_filter.py
